[package]
name = "aoc-2019"
version = "1.0.0"
authors = ["eutro"]
edition = "2018"
autobins = false

[features]
wasm = []

[dependencies]
wasm-bindgen = "0.2.0"
itertools = "0.10.0"
num = "0.3.1"
priority-queue = "0.5.2"

[lib]
name = "aoc"
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
